(#371) Avoid unnecessary scrollbars
This adjusts the left navigation to avoid unnecessary scrollbars by
giving the left navigation a height. After checking that this CSS was
used nowhere else, it has been moved to the specific
_left-navigation.scss file so it is more specific to this situation.

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -235,11 +235,6 @@ hr {
 }
 
 @include media-breakpoint-up(md) {
-    .sticky-md-top {
-        max-height: 100vh;
-        overflow: auto;
-    }
-
     .h-md-400-px {
         height: 400px !important;
     }
